# polin_gateway

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/utils/: CMakeLists.txt  modbus_utils.c  modbus_utils.h  utils.c  utils.h
data/: index.html
main/: CMakeLists.txt  defines.h  idf_component.yml  main.c
